--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <div>
-  <h1>Hola</h1>
+  <h1> {{title}} Hola</h1>
+</div>
+
+<div>
+  <app-busqueda></app-busqueda>
 </div>
 
 <router-outlet></router-outlet>
